force-app/main/default/objects/MonitorRequest__c/MonitorRequest__c.object-meta.xml
<CustomObject>
    <label>Monitor Request</label>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>Monitor Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monitor Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>