force-app/main/default/objects/MonitorRequest__c/fields/ActionId__c.field-meta.xml
<CustomField>
    <fullName>ActionId__c</fullName>
    <label>Action Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>