force-app/main/default/objects/MonitorRequest__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <label>Action Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>