force-app/main/default/objects/MonitorRequest__c/fields/LastActionCheckDate__c.field-meta.xml
<CustomField>
    <fullName>LastActionCheckDate__c</fullName>
    <label>Last Action Check Date</label>
    <type>DateTime</type>
</CustomField>