force-app/main/default/objects/MonitorRequest__c/fields/LastErrorDetail__c.field-meta.xml
<CustomField>
    <fullName>LastErrorDetail__c</fullName>
    <label>Last Error Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>