force-app/main/default/objects/MonitorRequest__c/fields/MonitorFrequency__c.field-meta.xml
<CustomField>
    <fullName>MonitorFrequency__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>In seconds</inlineHelpText>
    <label>Monitor Frequency</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>