force-app/main/default/objects/MonitorRequest__c/fields/SourceData__c.field-meta.xml
<CustomField>
    <fullName>SourceData__c</fullName>
    <label>Source Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>