force-app/main/default/objects/MonitorRequest__c/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <label>Source Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>