force-app/main/default/objects/MonitorRequest__c/validationRules/FrequencyCompliesWithQueueableDelay.validationRule-meta.xml
<ValidationRule>
    <fullName>FrequencyCompliesWithQueueableDelay</fullName>
    <active>true</active>
    <errorConditionFormula>MonitorFrequency__c &lt; 1 || MonitorFrequency__c &gt; 10</errorConditionFormula>
    <errorDisplayField>MonitorFrequency__c</errorDisplayField>
    <errorMessage>Monitor frequency should be between 1 and 10 minutes</errorMessage>
</ValidationRule>