force-app/main/default/objects/MonitorRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ActionType__c</columns>
    <columns>ActionId__c</columns>
    <columns>LastActionCheckDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>